--- a/vignettes/a05-How-to-access-data.Rmd
+++ b/vignettes/a05-How-to-access-data.Rmd
@@ -10,3 +10,6 @@ knitr::opts_chunk$set(
 )
 ```
 
+Data will be publicly accessible after November 2022, when I plan to finish my PhD project and publish the data compendium. A link to a repositorium with pmird will be made available here.
+
+pmird will contain functions to make the data easily accessible and help to cite the retrieved data.
