Updated the authorship guidelines for the data paper.

--- a/vignettes/a07-Authorship-guidelines-for-the-data-paper.Rmd
+++ b/vignettes/a07-Authorship-guidelines-for-the-data-paper.Rmd
@@ -96,14 +96,16 @@ the process so that co-authors can contribute and know where the effort stands.
 3. **Mid-project addition of co-authors:** In some cases, co-authors may join the effort later than others, particularly if expertise is needed. In these cases, the new co-author is still held to the standards laid out in this document.
 
 4. **All co-authors must approve the final version of the manuscript prior to submission:** In fact, it
-would be unethical to submit a manuscript in which all co-authors did not read and approve the final submitted version. This task is not included in the contributions table because all co-authors must do it. **All authors have to respond to a request of the lead author to approve the manuscript for submission or resubmission within four weeks. All persons who do not fulfill this requirement are not considered as co-authors any more and moved to the acknowledgement section instead.** They may rejoin as authors if (1) they reply before the final submission of the manuscript and (2) follow the remaining requirements of the author guidelines. This is required for efficiency because of the expected large number of co-authors and the limited time available for manuscript finalisation and final submission.
+would be unethical to submit a manuscript in which all co-authors did not read and approve the final submitted version. This task is not included in the contributions table because all co-authors must do it.
 
-4. **Co-authors are held accountable for the content of their contributions:** This idea provides an important distinction between a co-author and someone who is acknowledged. We recognize that every co-author will not have a full working knowledge of all aspects of the research or the quantitative analysis (especially in the interdisciplinary cases described above in 2a-b); however, they need to know enough to defend the work.
+5. **All authors should respond to a request of the lead author to approve the manuscript for submission or resubmission as soon as possible (within four weeks).** Otherwise the progress of this project and the PhD project of the lead author (Henning Teickner) would get delayed. If a co-author does not respond for too long a while (more than four weeks), an ad-hock group of 3 team members will be convened to evaluate the issue (including at least one early-career individual, if possible). In case of an unreasonable delay, this group will agree upon measures to speed up the publicaton process. Such measures could be to try to contact the person via other communication tools, or, ultimatively, to move the person (at least temporally) to the acknwledgements section instead of the co-author list.  
 
-5. **An author-contribution paragraph must be inluded alongside the published data compendium:** An author-contribution paragraph must be written for each manuscript, and submitted to the journal with the manuscript. This step is important to ensure that all co-authors (particularly earlycareer individuals) get recognition for the contributions that they make to the project’s highly collaborative efforts. If journals do not have the normal practice of publishing such paragraphs, we will make the paragraph available as an online supplement/appendix to the paper. This paragraph is the table with activities and listed contributions above.
+6. **Co-authors are held accountable for the content of their contributions:** This idea provides an important distinction between a co-author and someone who is acknowledged. We recognize that every co-author will not have a full working knowledge of all aspects of the research or the quantitative analysis (especially in the interdisciplinary cases described above in 2a-b); however, they need to know enough to defend the work.
 
-6. **Authorship order:** The norm in our team and in ecology in general is for the lead (or co-lead) author(s) (Henning Teickner) to be listed first, and the co-authors listed thereafter. Since the majority of expected co-authors are assumed to be data contributors and it is difficult to quantify different contributions, we suggest to order the co-authors in alphabetical order, with exception to supervising co-authors listed as last authors. The description of the ordering style should be noted in the author-contribution statement.
+7. **An author-contribution paragraph must be inluded alongside the published data compendium:** An author-contribution paragraph must be written for each manuscript, and submitted to the journal with the manuscript. This step is important to ensure that all co-authors (particularly earlycareer individuals) get recognition for the contributions that they make to the project’s highly collaborative efforts. If journals do not have the normal practice of publishing such paragraphs, we will make the paragraph available as an online supplement/appendix to the paper. This paragraph is the table with activities and listed contributions above.
 
-7. **Conflict resolution:** If team-members do not perform the basic duties of a co-author described above, and agreed upon, then it is recommended that they step down from the research effort at any stage. If a lead-author feels that a co-author (or vice versa) is being unresponsive, but is not stepping down, then an ad-hoc group of 3 team members will be convened to evaluate the issue (including at least one early-career individual, if possible).
+8. **Authorship order:** The norm in our team and in ecology in general is for the lead (or co-lead) author(s) (Henning Teickner) to be listed first, and the co-authors listed thereafter. Since the majority of expected co-authors are assumed to be data contributors and it is difficult to quantify different contributions, we suggest to order the co-authors in alphabetical order, with exception to supervising co-authors listed as last authors. The description of the ordering style should be noted in the author-contribution statement.
+
+9. **Conflict resolution:** If team-members do not perform the basic duties of a co-author described above, and agreed upon, then it is recommended that they step down from the research effort at any stage. If a lead-author feels that a co-author (or vice versa) is being unresponsive, but is not stepping down, then an ad-hoc group of 3 team members will be convened to evaluate the issue (including at least one early-career individual, if possible).
 
 ## Sources
