--- a/vignettes/a08-News.Rmd
+++ b/vignettes/a08-News.Rmd
@@ -11,4 +11,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-Currently, there are no news.
+### 2020-06-22
+
+I've updated the [authorship guidelines for the data paper](a07-Authorship-guidelines-for-the-data-paper.html) with recommendations from my supervisor to make better facilitate collaboration on the project.
