--- a/README.Rmd
+++ b/README.Rmd
@@ -28,11 +28,13 @@ knitr::include_graphics("./man/figures/pmird_icon.svg")
 
 <!-- [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh///master?urlpath=rstudio)  --> 
 
-pmird is an R package that has the aim to provide a comprehensive and easily to access data collection of mid infrared spectra (MIR) of peat and related material (for example peat forming vegetation or DOM).
+pmird is an R package that has two major aims: 
 
-pmird is designed as community-based project, meaning that everybody can contribute and benefit from this project. Learn more about [why you should contribute](https://henningte.github.io/pmird/articles/a01-Why-to-contribute.html) to pmird and [how you can use the data](https://henningte.github.io/pmird/articles/a05-How-to-access-data.html)!
+1. Provide a comprehensive and easily to access data collection of mid infrared spectra (MIR) of peat and related material (for example peat forming vegetation or dissolved organic matter).
 
-pmird is part of my PhD project. I want to be fully transparent on [what I plan to do with the data](https://henningte.github.io/pmird/articles/a02-What-I-plan-to-do-with-the-data.html).
+2. Combine this with additional data on peat characteristics, such as bulk density or carbon content, to support the development of MIR prediction models for these characteristics.
+
+pmird is a community-based project, where everybody can contribute and access data. Learn more about [how you can use the data](https://henningte.github.io/pmird/articles/a05-How-to-access-data.html)!
 
 <!-- ### How to cite
 
@@ -64,7 +66,5 @@ remotes::install_github("/")
 ### Contributions
 
 We welcome contributions from everyone. Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
-
-If you want to contribute data to pmird, please see [How to contribute](https://henningte.github.io/pmird/articles/a03-How-to-contribute.html).
 
 If you want to contribute to the code, please see our [code contributor guidelines](CONTRIBUTING.md).
