--- a/vignettes/a07-Authorship-guidelines-for-the-data-paper.Rmd
+++ b/vignettes/a07-Authorship-guidelines-for-the-data-paper.Rmd
@@ -23,9 +23,9 @@ library(kableExtra)
 
 This document is intended to foster an open dialog on authorship to the data paper on the data compendium pmird. Note that there are separate [authorship guidelines for the data compendium pmird itself](a06-Authorship-guidelines-for-pmird.html). The document is based on the authorship guidelines template document developed by @Oliver.2018.
 
-In the table below, all tasks for the succesfull finalisation and submission of the manuscript for the data paper on pmird are listed. In the right column, the names of all current co-authors are listed for the respective task. This document is continuously updated if there are new contributions to the manuscript.
+In the table below, all tasks for the succesful finalization and submission of the manuscript for the data paper on pmird are listed. In the right column, the names of all current co-authors are listed for the respective task. This document is continuously updated if there are new contributions to the manuscript.
 
-The information provided in this table are the basis for the authorship order and the description of inidividual contributions to the data paper according to the guidelines listed below.
+The information provided in this table are the basis for the authorship order and the description of individual contributions to the data paper according to the guidelines listed below.
 
 If you feel that you are not appropriately acknowledged, that some of the guidelines are not acceptable for you, or you want to participiate in additional activities, contact henning.teickner@uni-muenster.de or open an [issue](https://github.com/henningte/pmird/issues) and describe your problem. 
 
