--- a/vignettes/a08-News.Rmd
+++ b/vignettes/a08-News.Rmd
@@ -11,6 +11,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+### 2025-04-02
+
+Work in the database is is finished. I will finalize a draft for the data paper within the upcoming weeks.
+
 ### 2020-06-22
 
 I've updated the [authorship guidelines for the data paper](a07-Authorship-guidelines-for-the-data-paper.html) with recommendations from my supervisor to better facilitate collaboration on the project.
